# SRI-FTSensor-SDK

./: CMakeLists.txt  test.cpp
include/sri/: Logger.h  ftsensor.hpp
src/: Logger.cpp  adapter.hpp  commethernet.hpp  ftsensor.hpp  linux_tcp_adapter.hpp  testc copy.cpp  testc.cpp  untest.cpp  win_tcp_adapter.hpp
